Adding test coverage.